--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@ color:black;
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="#">
-                        <img src="assets/images/logocube.svg" alt="مكتب المكعب المميز للاستشارات الهندسية" style="height: 3.7rem;">
+                        <img src="assets/images/desseclogo.svg" alt="مكتب المكعب المميز للاستشارات الهندسية" style="height: 3.7rem;">
                     </a>
                 </span>
                 
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-2">من نحن</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-3">رؤيتنا</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-3">الاهداف</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article6-5">خدماتنا</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#gallery3-4">المنزل الذكي</a></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-2">من نحن</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-3">رؤيتنا</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article5-3">الاهداف</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#article6-5">خدماتنا</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-7" href="index.html#form1-a">تواصل معنا</a></div>
             </div>
@@ -217,6 +216,16 @@ color:black;
             </div>
         </div>
     </div>
+    <script>
+        document.querySelectorAll('.item').forEach((item)=>{
+    let i = item;
+    item.onclick = function(){
+        console.log(i);
+        let text=i.querySelector('.item-title').innerHTML;
+        window.location.href = 'https://wa.me/966564000640?text='+text;
+    }
+});
+    </script>
 </section>
 
 <section data-bs-version="5.1" class="form1 cid-sLnAAnw1ly" id="form1-a">
@@ -251,7 +260,7 @@ color:black;
                         <div class="col-auto form-part">
                             <div class="mbr-form top" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="057ZLTkRtlELl7lw8a57Aa5BLbKpT46YSwMQfJE5dsy3qJfdDD5VQi7mTlGpuEsv+RH/hDGcG3cbtSs2S+YLIrvHhK/Lh+eFj4rO3lfLMhwKDDL+VAorjAJwbEAcl0t/.BYcfYQ52ZCrjfXLokuT0Yz2JkV9BFVZN47AVO1TtfR7Whvl1ekhOFURaiWn2G1Ncv2bipMYUAoYBWAjhJsAlc316u5WjYAWy1BNC8DpQgcBvUS0K6v36ctzDa2+3xO8f">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="okBRR2723bHBGFZmcQVVNKWBUDDfLyt1NdbK7iN/Th4zWfBg4uQldy/Ho3CFWPvAjrOB0f66Z0sOMtXxNeVzhaJJfvrk9fauKokDLNB3c9lWDsMHSvm8Q1iEkHtyhdHq.KVnoMAnFkOVdpkjFH9F8jCTKv5hqikh9q2JQU0IuBgkSF+IrUysu5OqgTBRXyNzV+VDZFNhsgwWbhBDu9zQp0MRkG+X7W8sV34yLuJz6CmgOFHFqhEEWbLFYThq/qfmz">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكراً ، سوف نقوم بتواصل معك</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> Oops...! some problem!</div>
