--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
@@ -270,7 +268,7 @@ color:black;
                         <div class="col-auto form-part">
                             <div class="mbr-form top" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tsHtlz2rjLiulhOywblWqZo4pdWxHveo7FozRalf0Q6PpIJCoOazE7DWmlSh05W8g+f9jyIdsME0ulJwa2cl224ejhqJTJXqFD2CgFkEvXMFpt2548BEsLlt9B+V2HUF.bYtZ9Cm9A0QHeqpkaOrXhUiVqxdVjFIfe9xgd7vPKe9g7RXJtDd3WDo9vUag7uiylzkei12XxVjahJecHFd1hnuZvWav3NfnHwtwGCg+EC/1MPDqijr0PhF1XgymX2Qo">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nPGGFDgCRnjXyp3dAwth11l34wKoPWAJkUjYuu9BheSsfYsvcHplAhZyr5aW70E1iOP0tVIJnzaOlsXqNx/+mjiewrSN46dHi+izX2v1HcJUiSIT9GtKgoR1kMMfaqVs.EgCRP6qlTGK6iRabQtljA+yb7r9v6ciBc+v4puKg8GklaLei89O5UDrE5UONRxbkgxcEg6ewYzDThMPsBFV3kFHh7/gS9PKXyG16p4sve+n9GcFQTTbjXhEptKvIEV3n">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكراً ، سوف نقوم بتواصل معك</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> Oops...! some problem!</div>
@@ -342,7 +340,8 @@ color:black;
             hide_all_section();
             id = 'o_'+id;
             $('#'+id).show();            
-            document.querySelector("#"+id).scrollIntoView({ behavior: "smooth" });                        
+            document.querySelector("#"+id).scrollIntoView({ behavior: "smooth" });   
+            document.querySelector('.navbar-toggler').click();
         }
         
     </script>
@@ -353,8 +352,6 @@ color:black;
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/formstyler/jquery.formstyler.js"></script>
-  <script src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
